<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="224dp"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sw_card_enabled"
        style="@style/ledge_bottom_sheet_style"
        android:text="@string/switch_enable_card" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sw_show_card_info"
        style="@style/ledge_bottom_sheet_style"
        android:checked="false"
        android:text="@string/switch_show_card_info" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_android_pay"
            style="@style/ledge_icon_style"
            android:src="@drawable/ic_android_gray_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/white"
            android:text="@string/save_to_android_pay_label"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_report_stolen_card"
            style="@style/ledge_icon_style"
            android:src="@drawable/ic_error_gray_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/white"
            android:text="@string/report_lost_card_label"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_change_pin"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_change_pin"
            style="@style/ledge_icon_style"
            android:src="@drawable/ic_lock_grey_400_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/white"
            android:text="@string/change_pin_label"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>