<?xml version="1.0" encoding="utf-8"?>
<me.ledge.link.sdk.ui.views.verification.EmailVerificationView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:pinview="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/include_llsdk_toolbar" />

    <!-- Dummy to get focus on start. -->
    <RelativeLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/abl_toolbar_wrapper"
            android:layout_above="@+id/tv_next_bttn">

        <RelativeLayout
            style="?attr/llsdk_dataContainerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_shield_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_verify_email"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/tv_verification_code_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_below="@+id/iv_shield_check"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:text="@string/email_verification_info" />

            <TextView
                android:id="@+id/tv_verification_code_info"
                style="?attr/llsdk_idVerification_disclaimerStyle"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/tv_verification_code_header"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:text="@string/email_verification_code_hint" />

            <TextView
                android:id="@+id/tv_submit_bttn"
                style="?attr/llsdk_bigButtonStyle"
                android:layout_below="@+id/tv_verification_code_info"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:text="@string/email_verification_button_submit" />

            <TextView
                android:id="@+id/tv_resend_bttn"
                style="?attr/llsdk_loanOfferSummary_buttonStyle"
                android:layout_below="@+id/tv_submit_bttn"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:text="@string/email_verification_button_resend" />

        </RelativeLayout>
    </ScrollView>

    <include layout="@layout/include_progress_bar" />

</me.ledge.link.sdk.ui.views.verification.EmailVerificationView>
