<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/custodian_logo"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/tv_card_balance"
        android:layout_below="@+id/custodian_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="42sp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tv_card_balance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_card_balance"
        android:textColor="@android:color/darker_gray"
        android:layout_centerHorizontal="true"
        android:text="@string/card_management_card_balance" />

    <me.ledge.link.sdk.ui.views.card.CreditCardView
        android:id="@+id/credit_card_view"
        android:layout_width="wrap_content"
        android:layout_height="225dp"
        android:layout_below="@id/tv_card_balance_label"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/tv_display_card_primary_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credit_card_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/card_management_primary_button" />

    <TextView
        android:id="@+id/tv_display_card_secondary_bttn"
        style="@style/ledge_big_button_style"
        android:layout_below="@+id/tv_display_card_primary_bttn"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/card_management_secondary_button" />

    <TextView
        android:id="@+id/tv_transactions_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_display_card_secondary_bttn"
        android:paddingStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingTop="16dp"
        android:text="@string/card_management_trasactions_title"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:background="@android:color/white"/>

    <ImageButton
        android:id="@+id/ib_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/credit_card_view"
        android:layout_alignRight="@+id/credit_card_view"
        android:layout_marginTop="48dp"
        android:background="@android:color/white"
        android:src="@drawable/ic_account_circle_black_36dp" />

</RelativeLayout>