<?xml version="1.0" encoding="utf-8"?>
<me.ledge.link.sdk.ui.views.loanapplication.LoanAgreementView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/include_llsdk_toolbar" />

    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
            android:id="@+id/osv_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/abl_toolbar_wrapper"
            android:layout_above="@+id/v_divider">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RelativeLayout
                    style="?attr/llsdk_loanAgreement_sectionStyle"
                    android:gravity="center_horizontal"
                    android:paddingLeft="48dp"
                    android:paddingStart="48dp"
                    android:paddingRight="48dp"
                    android:paddingEnd="48dp">

                <ImageView
                        android:id="@+id/iv_lender_logo"
                        android:layout_width="240dp"
                        android:layout_height="180dp"
                        style="@style/llsdk_lender_logo" />

                <TextView
                        android:id="@+id/tv_lender_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/llsdk_terms_title_text_size" />

            </RelativeLayout>

            <LinearLayout
                    android:orientation="vertical"
                    style="?attr/llsdk_loanAgreement_sectionStyle"
                    android:layout_marginTop="16dp">

                <TextView
                        style="?attr/llsdk_loanAgreement_sectionHeaderStyle"
                        android:id="@+id/tv_terms_header"
                        android:text="@string/loan_agreement_terms_header" />

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp">

                    <TextView
                            style="?attr/llsdk_loanAgreement_summaryTextStyle"
                            android:text="@string/loan_agreement_terms_interest" />

                    <TextView
                            android:id="@+id/tv_loan_interest_rate"
                            style="?attr/llsdk_loanAgreement_summaryValuesStyle" />

                </RelativeLayout>

                <View style="@style/llsdk_horizontal_hairline" />

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp">

                    <TextView
                            style="?attr/llsdk_loanAgreement_summaryTextStyle"
                            android:text="@string/loan_agreement_terms_amount" />

                    <TextView
                            android:id="@+id/tv_loan_amount"
                            style="?attr/llsdk_loanAgreement_summaryValuesStyle" />

                </RelativeLayout>

                <View style="@style/llsdk_horizontal_hairline" />

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp">

                    <TextView
                            style="?attr/llsdk_loanAgreement_summaryTextStyle"
                            android:text="@string/loan_agreement_terms_duration" />

                    <TextView
                            android:id="@+id/tv_loan_duration"
                            style="?attr/llsdk_loanAgreement_summaryValuesStyle" />

                </RelativeLayout>

                <View style="@style/llsdk_horizontal_hairline" />

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp">

                    <TextView
                            style="?attr/llsdk_loanAgreement_summaryTextStyle"
                            android:text="@string/loan_agreement_terms_payment" />

                    <TextView
                            android:id="@+id/tv_payment"
                            style="?attr/llsdk_loanAgreement_summaryValuesStyle" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    style="?attr/llsdk_loanAgreement_sectionStyle"
                    android:layout_marginTop="16dp">

                <TextView
                        style="?attr/llsdk_loanAgreement_sectionHeaderStyle"
                        android:id="@+id/tv_borrower_agreement_header"
                        android:text="@string/loan_agreement_borrower_agreement_header" />

                <TextView
                        android:id="@+id/tv_esign_disclaimer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp">

                <CheckBox
                        android:id="@+id/cb_accept_terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                <TextView
                        android:id="@+id/tv_esign_consent_disclaimer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:paddingTop="2dp"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp" />

            </LinearLayout>
        </LinearLayout>
    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>

    <View
            android:id="@+id/v_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000"
            android:layout_above="@+id/tv_confirm_btn" />

    <TextView
            android:id="@+id/tv_confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/loan_agreement_button_scroll_down" />

    <include layout="@layout/include_rl_loading" />
</me.ledge.link.sdk.ui.views.loanapplication.LoanAgreementView>
