<?xml version="1.0" encoding="utf-8"?>
<me.ledge.link.sdk.ui.views.userdata.LoanAmountView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/include_toolbar" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/abl_toolbar_wrapper"
            android:layout_above="@+id/tv_next_bttn">

        <LinearLayout
                style="?attr/llsdk_dataContainerStyle"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_loan_amount"
                    style="?attr/llsdk_userData_sliderHeaderStyle" />

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:id="@+id/dsb_loan_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="96dp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Design.Hint"
                    android:textColor="?android:textColorHint"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/loan_amount_purpose_header" />

            <Spinner
                    android:id="@+id/sp_loan_purpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nextFocusDown="@+id/et_zip_code"
                    android:nextFocusRight="@+id/et_zip_code" />

            <TextView
                    android:id="@+id/tv_loan_purpose_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    style="@style/TextAppearance.Design.Error"
                    android:text="@string/loan_amount_purpose_error" />

        </LinearLayout>
    </ScrollView>

    <TextView
            android:id="@+id/tv_next_bttn"
            style="?attr/llsdk_nextButtonStyle"
            android:text="@string/loan_amount_button_next" />

    <include layout="@layout/include_rl_loading" />
</me.ledge.link.sdk.ui.views.userdata.LoanAmountView>
